<resources>
    <string name="app_name">Trashify</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="have_account">Have an Account?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_acc">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="trashify">Trashify</string>
    <string name="trashify_desc">Make Your Trash to be Creative Products</string>
    <string name="image_welcome">image_welcome</string>
    <string name="title_menu1">Welcome!</string>
    <string name="description_menu1">Trashify is an application designed to address urgent environmental issues in Indonesia, specifically improper waste disposal</string>
    <string name="title_menu2">Let’s Start!</string>
    <string name="description_menu2">Let’s start! Your journey to a cleaner, greener Indonesia begins here. Let\'s Trashify for a better future!</string>
    <string name="start_now">Start Now</string>
    <string name="result">Result:</string>
    <string name="persentase">0% Material</string>
    <string name="judul_tutor">Judul Tutorial</string>
    <string name="tutorial">Ini tutorial</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_galery">Galery</string>
    <string name="description">Description</string>
    <string name="title_activity_clasification">ClasificationActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="scan_here"> Scan Here</string>
    <string name="text_scan">You can classify your waste here to receive recommendations for creative projects you can make.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post_headline">Post</string>
    <string name="more_post">More</string>
    <string name="image_photo">Photo</string>
    <string name="username">Username</string>
    <string name="desc_post">This is Description of Post</string>
    <string name="likes">200 Likes</string>
    <string name="todo">TODO</string>
    <string name="title_post">Post</string>
    <string name="fab">FAB</string>
    <string name="title_detail_post">Detail Post</string>
    <string name="btn_galeri">Gallery</string>
    <string name="title_upload_post">Upload Post</string>
    <string name="title_community">Community</string>
    <string name="title_detail_picture">Detail Picture</string>
    <string name="hai">Hai, </string>
    <string name="change_langguage">Change Langguage</string>
    <string name="logout">Logout</string>
</resources>